--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,3 +7,7 @@ spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 # H2 console - http://localhost:8080/h2-console
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2-console
+
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.format_sql=true
