CARD 형식으로 장바구니에 저장 완료ㅕ

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -13,6 +13,9 @@ spring:
       # H2 console settings - Access at http://localhost:8080/h2-console
       path: /h2-console
       enabled: 'true'
+  devtools:
+    restart:
+      enabled: true
   jpa:
     # JPA Configuration
     defer-datasource-initialization: 'true'
