--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,4 +1,7 @@
 spring:
+  profiles:
+    active:
+      s3Bucket
   application:
     # Application name
     name: Spring_boots
@@ -39,11 +42,3 @@ jwt:
     refresh-expires: 1200000 # 20분
     access-expires: 600000 # 10분
 
-aws:
-  s3:
-    bucket:
-      credentials:
-        accessKey: AKIAWOOXT2P2HYJJ4352
-        secretAccessKey: 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
-      region: ap-northeast-2
-      name: project-springboots
