feat: category-detail.html, css, js 수정 + category-new-or-best.html, css, js 작성

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,7 +1,6 @@
 spring:
   profiles:
-    active:
-      s3Bucket
+    active: s3Bucket
   application:
     # Application name
     name: Spring_boots
